Implemented Initial Semantic Setup

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -24,49 +24,70 @@
     <a href="#">Features</a>
     <a href="#">About</a>
     <a href="#">Contact</a>
-  
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-</nav>  
-<header>
-  <h1>
-Innovation
-  On
-  Demand
-</h1>
-  <btn>Get Started</btn>
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </nav>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-</header>
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
-  eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <header>
+    <h1>
+      Innovation
+      On
+      Demand
+    </h1>
+    <btn>Get Started</btn>
 
+    <img src="img/header-img.png" alt="Image of a code snippet.">
+  </header>
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
-  eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section>
+    <div>Features
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse
+      eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
+
+    <div>
+      About
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse
+      eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
+  </section>
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
-  eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section>
+    <div>
+      Services
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse
+      eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
 
+    <div>
+      Product
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse
+      eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
-  eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    <div>
+      Vision
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse
+      eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
+  </section>
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
-  eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+  <section>
+    Contact
+    <address>
+      123 Way 456 Street
+      Somewhere, USA
+    </address>
+    1 (888) 888-8888
+    sales@greatidea.io
+  </section>
 
   <footer>Copyright Great Idea! 2018</footer>
 
