Settings for Display Images

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
   <nav>
     <a href="#">Services</a>
     <a href="#">Product</a>
@@ -29,11 +28,7 @@
   </nav>
 
   <header>
-    <h1>
-      Innovation
-      On
-      Demand
-    </h1>
+    <h1>Innovation<br/>On<br/>Demand</h1>
     <btn>Get Started</btn>
 
     <img src="img/header-img.png" alt="Image of a code snippet.">
