--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -23,8 +23,10 @@
     <a href="#">Features</a>
     <a href="#">About</a>
     <a href="#">Contact</a>
-
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+<!-- </nav> -->
+    <!-- <a href-"#"> -->
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    <!-- </a> -->
   </nav>
 
   <header>
