--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -23,28 +23,28 @@
     <a href="#">Features</a>
     <a href="#">About</a>
     <a href="#">Contact</a>
-<!-- </nav> -->
-    <!-- <a href-"#"> -->
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    <!-- </a> -->
+    
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
   </nav>
 
   <header>
     <h1>Innovation<br/>On<br/>Demand</h1>
     <btn>Get Started</btn>
-
-    <img src="img/header-img.png" alt="Image of a code snippet.">
   </header>
+  <img class="header-img" src="img/header-img.png" alt="Image of a code snippet.">
+
+  <hr>
 
   <section>
-    <div>Features
+    <div>
+      <h2>Features</h2>
       Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
       Suspendisse
       eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
     </div>
 
     <div>
-      About
+      <h2>About</h2>
       Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
       Suspendisse
       eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
